# gandalf

./: .gitignore  .shellcheckrc  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  NOTICE  README.md  TROUBLESHOOTING.md  gandalf  gandalf copy.sh  gandalf-rules.md  gandalf-rules.txt  gandalf.sh  mcp-settings.json  pyproject.toml  pytest.ini  requirements.txt  rules.md  shell_update.md  shell_update_progress.md  weights.yaml
Docker/: Dockerfile  (+2 more)
server/: CLAUDE.md  Makefile  README.md  diff  main.py  pyproject.toml  pytest.ini  requirements.txt
server/config/: cache.py  constants.py  load_weights.py  loader.py  tool_definitions.py  tool_handlers.py  weights.py
server/config/constants/: conversations.py  core.py  system.py  technology.py
server/src/: common_imports.py  context_intelligence.py  git_operations.py  ignored_files.py  main.py  query_handler.py  utils.py
server/src/config/: README.md  cache.py  config.py  config_data.py  constants.py  conversation_config.py  core_constants.py  enums.py  schemas.py  security_config.py  tool_config.py  validation.py  weights.py
server/src/config/constants/: agentic.py  cache.py  context.py  conversation.py  database.py  file_system_context.py  limits.py  paths.py  schema_defaults.py  security.py  server.py  server_config.py  windsurf.py
server/src/content/: load_generic_content.py
server/src/core/: README.md  content_extractor.py  context_intelligence.py  conversation_analysis.py  conversation_filtering.py  conversation_scorer.py  conversation_standardizer.py  conversation_storage.py  database_counter.py  database_scanner.py  database_scanner_base.py  file_scoring.py  git_activity.py  ignored_files.py  keyword_extractor.py  message_loop.py  project_filtering.py  registry.py  server.py  tool_registry.py  tool_scanners.py
server/src/database_management/: conversation_threading.py  create_filters.py  execute_query.py  extract_conversation_data.py  format_output.py  recall_conversations.py  recency_scorer.py
server/src/protocol/: jsonrpc_server.py  models.py
server/src/tool_calls/: aggregation_utils.py  aggregator.py  aggregator_backup.py  claude_code_query.py  claude_code_recall.py  context_optimization.py  conversation_aggregator.py  conversation_export.py  conversation_ingestion.py  conversation_recall.py  cursor_query.py  export.py  file_tools.py  project_operations.py  response_formatting.py  tool_aggregation.py  windsurf_query.py  windsurf_recall.py
server/src/tool_calls/claude_code/: query.py  recall.py
server/src/tool_calls/conversations/: README.md  conversation_cache.py  conversation_operations.py
server/src/tool_calls/cursor/: conversation_analyzer.py  conversation_cache.py  conversation_formatter.py  conversation_parser.py  conversation_utils.py  query.py  recall.py  recall_backup.py
server/src/tool_calls/file/: README.md  file_cache.py  file_operations.py
server/src/tool_calls/git/: git_operations.py
server/src/tool_calls/windsurf/: conversation_extractor.py  database_reader.py  query.py  query_validator.py  recall.py  windsurf_query.py
server/src/tools/: base_tool.py  echo_tool.py  list_spells_tool.py  recall_conversations_tool.py  registry.py  server_info_tool.py  spell_tool.py
server/src/utils/: README.md  access_control.py  cache.py  common.py  conversation_export.py  cursor_chat_query.py  database_pool.py  error_handling.py  jsonrpc.py  logger.py  memory_cache.py  parameter_validator.py  path_utils.py  performance.py  project.py  schema_validation.py  security.py  version.py
server/tests/: conftest.py  main_test.py  quality_assurance.py  run-python-tests.sh  run_tests.sh  test_common_imports.py  test_main.py
server/tests/config/: test_database_config.py  test_jsonrpc_constants.py  test_validation.py  test_weights.py
server/tests/core/: test_content_extractor.py  test_context_intelligence.py  test_conversation_analysis.py  test_conversation_analysis_batch.py  test_conversation_filtering.py  test_conversation_scorer_extended.py  test_conversation_standardizer.py  test_conversation_storage.py  test_database_counter_extended.py  test_database_scanner.py  test_file_scoring.py  test_git_activity.py  test_message_loop.py  test_project_filtering.py  test_registry.py  test_server.py  test_tool_scanners_extended.py
server/tests/database_management/: test_conversation_threading.py  test_create_filters.py  test_execute_query.py  test_extract_conversation_data.py  test_format_output.py  test_recency_scorer.py
server/tests/integration/: test_conversation_recall_workflow.py  test_query_handler.py
server/tests/performance/: test_recall_performance.py
server/tests/protocol/: jsonrpc_server_tests.py
server/tests/tool_calls/: test_claude_code_integration.py  test_claude_code_query.py  test_claude_code_recall.py  test_context_optimization_extended.py  test_conversation_aggregator.py  test_conversation_export.py  test_conversation_recall.py  test_cursor_integration.py  test_file_tools.py  test_lightweight_conversations.py  test_project_operations.py  test_windsurf_integration.py  test_windsurf_query.py  test_windsurf_recall.py
server/tests/tool_calls/claude_code/: test_claude_code_integration.py  test_claude_code_query.py  test_claude_code_recall.py
server/tests/tool_calls/cursor/: test_conversation_analyzer.py  test_conversation_cache.py  test_conversation_parser.py  test_conversation_recall.py  test_conversation_utils.py  test_cursor_integration.py  test_cursor_query.py
server/tests/tool_calls/project_operations/: test_file_statistics.py  (+1 more)
server/tests/tools/: recall_conversations_tests.py  registry_tests.py  spell_tool_tests.py  test_list_spells_tool.py  test_spell_tool.py
server/tests/utils/: common_test.py  db_test_helpers.py  logger_test.py  test_access_control.py  test_cache.py  test_common.py  test_conversation_export_utils.py  test_cursor_chat_query.py  test_database_pool.py  test_error_handling.py  test_jsonrpc.py  test_memory_cache.py  test_parameter_validator.py  test_performance.py  test_project.py  test_schema_validation.py  test_version.py
(+217 files in other folders)
