[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gandalf-server"
version = "0.1.0"
description = "Gandalf MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "bluekornchips", email = "bluekornchips@github.com"}
]
keywords = ["json-rpc", "tools", "server", "ai", "assistant"]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/bluekornchips/gandalf"
Repository = "https://github.com/bluekornchips/gandalf"


[project.scripts]
gandalf-server = "server.main:main"
gandalf-query = "src.query_handler:main"

[tool.setuptools]
package-dir = {"" = "server"}

[tool.setuptools.packages.find]
where = ["server"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
mypy_path = "server"

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = ["-v", "--tb=short"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"