[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[project]
name = "gandalf-mcp"
version = "2.2.3"
description = "Gandalf MCP Server - Agentic Tool Integrator for Development Assistants"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "bluekornchips", email = "bluekornchips@github.com"}
]
keywords = ["mcp", "model-context-protocol", "ai", "assistant", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12+",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=7.0.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/bluekornchips/gandalf"
Repository = "https://github.com/bluekornchips/gandalf"
Issues = "https://github.com/bluekornchips/gandalf/issues"

[project.scripts]
gandalf-mcp = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--cov=src"] 